azure-export-20260102-134216/rg-c2-westus/rg-c2-westus-nsgs.json
[
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"d3c77cc3-a8ac-4bc0-94b4-1384d188717f\"",
        "id": "/subscriptions/8a353573-11b5-487f-ae19-23e98b217094/resourceGroups/rg-c2-westus/providers/Microsoft.Network/networkSecurityGroups/nsg-c2/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-c2-westus",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"d3c77cc3-a8ac-4bc0-94b4-1384d188717f\"",
        "id": "/subscriptions/8a353573-11b5-487f-ae19-23e98b217094/resourceGroups/rg-c2-westus/providers/Microsoft.Network/networkSecurityGroups/nsg-c2/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-c2-westus",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"d3c77cc3-a8ac-4bc0-94b4-1384d188717f\"",
        "id": "/subscriptions/8a353573-11b5-487f-ae19-23e98b217094/resourceGroups/rg-c2-westus/providers/Microsoft.Network/networkSecurityGroups/nsg-c2/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-c2-westus",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"d3c77cc3-a8ac-4bc0-94b4-1384d188717f\"",
        "id": "/subscriptions/8a353573-11b5-487f-ae19-23e98b217094/resourceGroups/rg-c2-westus/providers/Microsoft.Network/networkSecurityGroups/nsg-c2/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-c2-westus",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"d3c77cc3-a8ac-4bc0-94b4-1384d188717f\"",
        "id": "/subscriptions/8a353573-11b5-487f-ae19-23e98b217094/resourceGroups/rg-c2-westus/providers/Microsoft.Network/networkSecurityGroups/nsg-c2/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-c2-westus",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"d3c77cc3-a8ac-4bc0-94b4-1384d188717f\"",
        "id": "/subscriptions/8a353573-11b5-487f-ae19-23e98b217094/resourceGroups/rg-c2-westus/providers/Microsoft.Network/networkSecurityGroups/nsg-c2/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-c2-westus",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"d3c77cc3-a8ac-4bc0-94b4-1384d188717f\"",
    "id": "/subscriptions/8a353573-11b5-487f-ae19-23e98b217094/resourceGroups/rg-c2-westus/providers/Microsoft.Network/networkSecurityGroups/nsg-c2",
    "location": "westus",
    "name": "nsg-c2",
    "provisioningState": "Succeeded",
    "resourceGroup": "rg-c2-westus",
    "resourceGuid": "e782667f-4ddb-446d-bbfe-72d00567540f",
    "securityRules": [
      {
        "access": "Allow",
        "destinationAddressPrefix": "10.1.0.0/16",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"d3c77cc3-a8ac-4bc0-94b4-1384d188717f\"",
        "id": "/subscriptions/8a353573-11b5-487f-ae19-23e98b217094/resourceGroups/rg-c2-westus/providers/Microsoft.Network/networkSecurityGroups/nsg-c2/securityRules/allow-c1-to-c2",
        "name": "allow-c1-to-c2",
        "priority": 100,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-c2-westus",
        "sourceAddressPrefix": "10.0.0.0/16",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "type": "Microsoft.Network/networkSecurityGroups"
  }
]
